# covid-killer

./: README.md
api/: manage.py  pyproject.toml
api/covid_killer/: asgi.py  settings.py  urls.py  wsgi.py
mobile/: .env  .gitignore  App.tsx  app.json  env.ts  package-lock.json  package.json
mobile/.expo-shared/: assets.json
mobile/android/: settings.gradle
mobile/android/app/: BUCK  build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/covidkiller/: MainActivity.java  MainApplication.java
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/covidkiller/: AppDelegate.m  Info.plist
mobile/ios/covidkiller.xcodeproj/: project.pbxproj
mobile/ios/covidkiller.xcodeproj/xcshareddata/xcschemes/: covidkiller.xcscheme
mobile/ios/covidkiller.xcworkspace/: contents.xcworkspacedata
mobile/ios/covidkiller/Base.lproj/: LaunchScreen.xib
mobile/models/: Virus.ts
mobile/screens/: HomeScreen.tsx  VirusScreen.tsx  VirusSreen.tsx
mobile/screens/HomeScreen/: HomeScreen.style.ts  HomeScreen.tsx
mobile/screens/VirusScreen/: VirusScreen.style.ts  VirusScreen.tsx
mobile/shared/: asyncStorage.ts  location.ts
mobile/tasks/: virusTask.ts
